Back to Https AzureWebsites

--- a/WebApp-B2C-DotNet/Web.config
+++ b/WebApp-B2C-DotNet/Web.config
@@ -12,7 +12,7 @@
     <add key="ida:Tenant" value="canadab2c.onmicrosoft.com" />
     <add key="ida:ClientId" value="8dac426a-5d36-4f99-b24c-2862427bf090" />
     <add key="ida:AadInstance" value="https://login.microsoftonline.com/{0}{1}{2}" />
-    <add key="ida:RedirectUri" value="https://multiazure.com/" />
+    <add key="ida:RedirectUri" value="https://efmvc.azurewebsites.net/" />
     <add key="ida:SignUpPolicyId" value="B2C_1_EFSignUpPolicy" />
     <add key="ida:SignInPolicyId" value="B2C_1_EFSignInPolicy" />
     <add key="ida:UserProfilePolicyId" value="B2C_1_EFProfileEdit" />
