--- a/WebApp-B2C-DotNet/WebApp-OpenIDConnect-DotNet-B2C.csproj
+++ b/WebApp-B2C-DotNet/WebApp-OpenIDConnect-DotNet-B2C.csproj
@@ -212,6 +212,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
+    <Content Include="Views\Home\Member.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
