Added Document DB Manual Integration

--- a/WebApp-B2C-DotNet/WebApp-OpenIDConnect-DotNet-B2C.csproj
+++ b/WebApp-B2C-DotNet/WebApp-OpenIDConnect-DotNet-B2C.csproj
@@ -151,10 +151,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Account\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="DocumentDBRepository.cs" />
+    <Compile Include="Models\Users.cs" />
     <Compile Include="PolicyAuthHelpers\PolicyAuthorize.cs" />
     <Compile Include="PolicyAuthHelpers\PolicyConfigurationManager.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -217,6 +219,9 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
     <Content Include="Views\Home\Member.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Users\Create.cshtml" />
+    <Content Include="Views\Users\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
